# mcp-langchain

./: CONSTANTS_SUMMARY.md  README.md  chat.py  env.example  hello.py  mcp_server.py  mcp_tools.py  pyproject.toml  sales.db  setup_clean_database.py  setup_database.py
app/: __init__.py  constants.py  database.py  langchain_service.py  main.py  models.py  ollama_mcp_service.py  services.py
